--- a/WouldYouRather/ClientApp/src/app/pages/play/play.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/play/play.page.html
@@ -1,7 +1,7 @@
-<ion-toolbar color="secondary" class="ion-text-center" *ngIf="choosingPlayer && !amIPlaying()">
-  <ion-text *ngIf="gameStatus && gameStatus.whoIsChoosing">{{gameStatus.whoIsChoosing.name}} is picking</ion-text>
+<ion-toolbar color="secondary" class="ion-text-center" *ngIf="!amIPlaying()">
+  <ion-text *ngIf="gameStatus && gameStatus.choosingPlayer">{{gameStatus.choosingPlayer.name}} is picking</ion-text>
 </ion-toolbar>
-<ion-toolbar color="warning" class="ion-text-center" *ngIf="choosingPlayer && amIPlaying()">
+<ion-toolbar color="warning" class="ion-text-center" *ngIf="amIPlaying()">
   <ion-text>
     <strong>It's your turn!</strong><br />
     <strong>Make a choice!</strong>
@@ -11,12 +11,12 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-sm="8" offset-sm="2" size-lg="6" offset-lg="3" *ngIf="!choice || !ready">
+      <ion-col size-sm="8" offset-sm="2" size-lg="6" offset-lg="3" *ngIf="!gameStatus || !isReady()">
         <ion-card class="ion-text-center">
           <ion-card-header>
             <ion-card-title>Waiting...</ion-card-title>
             <ion-card-subtitle>
-              <ion-text *ngIf="gameStatus && gameStatus.whoIsChoosing">{{gameStatus.whoIsChoosing.name}} is picking</ion-text>
+              <ion-text *ngIf="gameStatus && gameStatus.choosingPlayer">{{gameStatus.choosingPlayer.name}} is picking</ion-text>
             </ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
@@ -25,10 +25,10 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size-sm="8" offset-sm="2" size-lg="6" offset-lg="3" *ngIf="choice && ready">
-        <ion-card *ngIf="choosingPlayer && !amIPlaying()">
+      <ion-col size-sm="8" offset-sm="2" size-lg="6" offset-lg="3" *ngIf="isReady()">
+        <ion-card *ngIf="gameStatus.choosingPlayer && !amIPlaying()">
           <ion-card-content>
-          <ion-text>{{choosingPlayer.name}} last chose:</ion-text>
+          <ion-text>{{gameStatus.choosingPlayer.name}} last chose:</ion-text>
           </ion-card-content>
         </ion-card>
         <ion-card>
@@ -37,7 +37,7 @@
               <ion-icon *ngIf="isChoice(false)" size="large" name="close-circle-outline" color="danger"></ion-icon>
               <ion-icon *ngIf="isChoice(true)" size="large" name="checkmark-circle-outline" color="success"></ion-icon>
               <ion-text class="ion-text-start">
-                <h2>{{choice.choiceA.text}}</h2>
+                <h2>{{gameStatus.choiceA.text}}</h2>
               </ion-text>
             </div>
             <div class="ion-padding-top" *ngIf="amIPlaying()">
@@ -45,7 +45,7 @@
                 <ion-icon name="trash-outline"></ion-icon>
                 <ion-label>This is mine</ion-label>
               </ion-button>
-              <ion-button (click)="acceptChoice(true)" *ngIf="this.gameStatus && this.gameStatus.remainingQuestions > 1">
+              <ion-button (click)="acceptChoice(true)" *ngIf="this.gameStatus.remainingQuestions > 1">
                 <ion-icon name="checkmark-outline"></ion-icon>
                 <ion-label>Pick</ion-label>
               </ion-button>
@@ -61,7 +61,7 @@
               <ion-icon *ngIf="isChoice(true)" size = "large" name="close-circle-outline" color="danger"></ion-icon>
               <ion-icon *ngIf="isChoice(false)" size = "large" name="checkmark-circle-outline" color="success"></ion-icon>
               <ion-text class="ion-text-start">
-                <h2>{{choice.choiceB.text}}</h2>
+                <h2>{{gameStatus.choiceB.text}}</h2>
               </ion-text>
             </div>
             <div class="ion-padding-top" *ngIf="amIPlaying()">
