fix some issues with game state not updating

--- a/WouldYouRather/ClientApp/src/app/pages/play/play.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/play/play.page.html
@@ -28,7 +28,7 @@
       <ion-col size-sm="8" offset-sm="2" size-lg="6" offset-lg="3" *ngIf="isReady()">
         <ion-card *ngIf="gameStatus.choosingPlayer && !amIPlaying()">
           <ion-card-content>
-          <ion-text>{{gameStatus.choosingPlayer.name}} last chose:</ion-text>
+          <ion-text>Last choice:</ion-text>
           </ion-card-content>
         </ion-card>
         <ion-card>
