--- a/WouldYouRather/ClientApp/src/app/pages/lobby/lobby.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/lobby/lobby.page.html
@@ -6,7 +6,7 @@
           <ion-card-header>
             <ion-card-title>Waiting...</ion-card-title>
             <ion-card-subtitle>
-              <ion-text>Waiting for other players to join</ion-text>
+              <ion-text>Hi {{getPlayerName()}}, we're waiting for other players to join</ion-text>
             </ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
@@ -16,7 +16,7 @@
             <ion-list>
               <ion-item *ngFor="let player of players">
                 <ion-label>{{player.name}}</ion-label>
-                <ion-icon *ngIf="player.choosing" name="time-outline"></ion-icon>
+                <ion-icon *ngIf="player.isChoosing" name="time-outline"></ion-icon>
               </ion-item>
             </ion-list>
           </ion-card-content>
