--- a/WouldYouRather/ClientApp/src/app/pages/settings/settings.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/settings/settings.page.html
@@ -7,18 +7,18 @@
 <ion-content>
   <ion-list>
     <ion-list-header>Current Game</ion-list-header>
-    <ion-item color="primary">Game is currently accepting entries</ion-item>
+    <ion-item color="primary">Game {{isAllowingEntries() ? 'is' : 'is not'}} currently accepting entries</ion-item>
     <ion-item>
       <ion-label position="stacked">Submit link</ion-label>
       <ion-label class="ion-text-wrap">{{getSubmitLink()}}</ion-label>
-    </ion-item>    
+    </ion-item>
     <ion-item>
       <ion-label>Allow entries</ion-label>
-      <ion-toggle slot="end"></ion-toggle>
+      <ion-toggle slot="end" [checked]="isAllowingEntries()"></ion-toggle>
     </ion-item>
     <ion-item>
       <ion-label>Start game</ion-label>
-      <ion-button slot="end">Start</ion-button>
+      <ion-button slot="end" (click)="startGame()">Start</ion-button>
     </ion-item>
   </ion-list>
 
