Show winning page with tabs

--- a/WouldYouRather/ClientApp/src/app/pages/settings/settings.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/settings/settings.page.html
@@ -26,7 +26,7 @@
     <ion-list-header>New game</ion-list-header>
     <ion-item>
       <ion-label>Create new game</ion-label>
-      <ion-button slot="end">Create</ion-button>
+      <ion-button slot="end" (click)="createGame()">Create</ion-button>
     </ion-item>
   </ion-list>
 </ion-content>
