--- a/WouldYouRather/ClientApp/src/app/pages/winner/winner.page.html
+++ b/WouldYouRather/ClientApp/src/app/pages/winner/winner.page.html
@@ -7,7 +7,7 @@
             <div>
               <ion-icon size="large" name="trophy" color="warning"></ion-icon>
               <ion-text class="ion-text-start">
-                <h2>{{gameStatus.choiceA.text}}</h2>
+                <h2>{{getWinner()}}</h2>
               </ion-text>
             </div>
           </ion-card-content>
